--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,7 @@
 @media (max-width: 420px) {
+  .header {
+    height: 100vh;
+  }
   .logo img {
     margin-bottom: 225px;
   }
@@ -11,5 +14,38 @@
     line-height: 25px;
     margin-bottom: 200px;
     text-align: center;
+  }
+  .menu {
+    position: relative;
+  }
+  .navbar {
+    margin-bottom: 20px;
+  }
+  .menu__list-item {
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .menu__list {
+    position: absolute;
+    bottom: -23px;
+    left: 0;
+    right: 0;
+    background-color: rgb(30 249 255);
+    display: block;
+    width: 100%;
+    transform: translateX(-200%);
+    z-index: 0;
+    transition: all 0.8s;
+  }
+  .menu__list--active {
+    transform: translateX(0%);
+  }
+  .menu__logo {
+    z-index: 25;
+  }
+  .menu__btn {
+    z-index: 25;
   }
 }
